--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,24 +127,26 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/TutorialRoom
-MRUItem2=/Game/Levels/OtherRoom
-MRUItem3=/Game/Levels/BasicRoom
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/InGameScreen
-MRUItem6=/Game/InGame/InGame
-MRUItem7=/Game/InGameScreen
-MRUItem8=/Game/StartScreen
-MRUItem9=/Game/StarterContent/Maps/Minimal_Default
+MRUItem0=/Game/Levels/MainMenu
+MRUItem1=/Game/Levels/BasicRoom
+MRUItem2=/Game/Levels/MasterLevel
+MRUItem3=/Game/Levels/TestingPauseMenuLevel
+MRUItem4=/Game/Levels/TutorialRoom
+MRUItem5=/Game/Levels/OtherRoom
+MRUItem6=/Game/Levels/InGameScreen
+MRUItem7=/Game/InGame/InGame
+MRUItem8=/Game/InGameScreen
+MRUItem9=/Game/StartScreen
+MRUItem10=/Game/StarterContent/Maps/Minimal_Default
 
 [EditorStartup]
-LastLevel=/Game/Levels/MasterLevel
+LastLevel=/Game/Levels/MainMenu
 
 [AssetEditorSubsystem]
 CleanShutdown=True
-OpenAssetsAtExit=/Game/InGame/Door.Door
-OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
+OpenAssetsAtExit=/Game/Enemey.Enemey
+OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/GUI/MainMenu/PauseMenu.PauseMenu
 OpenAssetsAtExit=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter
 
 [DetailCategories]
@@ -695,6 +697,62 @@ MasterLevel_C.Input=True
 MasterLevel_C.HLOD=True
 MasterLevel_C.WorldPartition=True
 MasterLevel_C.Events=True
+TestingPauseMenuLevel_C.Tick=True
+TestingPauseMenuLevel_C.Replication=True
+TestingPauseMenuLevel_C.Actor=True
+TestingPauseMenuLevel_C.Input=True
+TestingPauseMenuLevel_C.HLOD=True
+TestingPauseMenuLevel_C.WorldPartition=True
+TestingPauseMenuLevel_C.Events=True
+MainMenu_C.Tick=True
+MainMenu_C.Replication=True
+MainMenu_C.Actor=True
+MainMenu_C.Input=True
+MainMenu_C.HLOD=True
+MainMenu_C.WorldPartition=True
+MainMenu_C.Events=True
+MainMenu_C.Appearance=True
+MainMenu_C.Designer=True
+MainMenu_C.Interaction=True
+MainMenu_C.Performance=True
+MainMenu_C.Layout=True
+MainMenu_C.Behavior=True
+MainMenu_C.Render Transform=True
+MainMenu_C.Localization=True
+MainMenu_C.Accessibility=True
+MainMenu_C.Clipping=True
+MainMenu_C.Navigation=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+PauseMenu_C.Appearance=True
+PauseMenu_C.Designer=True
+PauseMenu_C.Input=True
+PauseMenu_C.Interaction=True
+PauseMenu_C.Performance=True
+PauseMenu_C.Layout=True
+PauseMenu_C.Behavior=True
+PauseMenu_C.Render Transform=True
+PauseMenu_C.Localization=True
+PauseMenu_C.Accessibility=True
+PauseMenu_C.Clipping=True
+PauseMenu_C.Navigation=True
+Enemey_C.TransformCommon=True
+Enemey_C.Rendering=True
+Enemey_C.Replication=True
+Enemey_C.Collision=True
+Enemey_C.HLOD=True
+Enemey_C.Input=True
+Enemey_C.Actor=True
+Enemey_C.Default=True
+Enemey_C.Tick=True
+Enemey_C.WorldPartition=True
+Enemey_C.Events=True
+K2Node_FunctionResult.Graph=True
+K2Node_FunctionResult.Inputs=True
+K2Node_FunctionResult.Outputs=True
+K2Node_CallFunction.Graph=True
+K2Node_CallFunction.Inputs=True
+K2Node_CallFunction.Outputs=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1715,7 +1773,7 @@ UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 BlockingVolume=BlockingVolume.Collision.Collision,
 BrushComponent=
-SceneComponent=BlockingVolume.Collision.Collision,
+SceneComponent=
 StaticMeshComponent=
 B_Room_C=BlockingVolume.Collision.Collision,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
@@ -1732,6 +1790,7 @@ BillboardComponent=BlockingVolume.Collision.Collision,
 ChildActorComponent=BlockingVolume.Collision.Collision,
 Actor=BlockingVolume.Collision.Collision,
 Brush=BlockingVolume.Collision.Collision,
+Enemey_C=BlockingVolume.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1782,7 +1841,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Levels
+ContentBrowserTab1.SelectedPaths=/Game/InGame
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
@@ -1791,22 +1850,25 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/MasterLevel
-MRUItem1=/Game/Levels/TutorialRoom
-MRUItem2=/Game/Levels/OtherRoom
+MRUItem0=/Game/InGame/B_PlayerCharacter
+MRUItem1=/Game/Enemey
+MRUItem2=/Game/Levels/MainMenu
 MRUItem3=/Game/Levels/BasicRoom
-MRUItem4=/Game/Levels/MainMenu
-MRUItem5=/Game/Levels/InGameScreen
-MRUItem6=/Game/InGame/B_PlayerCharacter
-MRUItem7=/Game/InGame/B_Room
-MRUItem8=/Game/InGame/Door
-MRUItem9=/Game/InGame/B_PlayerBullet
-MRUItem10=/Game/GUI/MainMenu/MainMenu
-MRUItem11=/Game/InGame/MyPlayerController
-MRUItem12=/Game/InGameScreen
-MRUItem13=/Game/MyGameModeBase
-MRUItem14=/Game/StartScreen
-MRUItem15=/Game/MyPlayerController
+MRUItem4=/Game/GUI/MainMenu/PauseMenu
+MRUItem5=/Game/Levels/MasterLevel
+MRUItem6=/Game/Levels/TestingPauseMenuLevel
+MRUItem7=/Game/GUI/MainMenu/MainMenu
+MRUItem8=/Game/Levels/TutorialRoom
+MRUItem9=/Game/Levels/OtherRoom
+MRUItem10=/Game/Levels/InGameScreen
+MRUItem11=/Game/InGame/B_Room
+MRUItem12=/Game/InGame/Door
+MRUItem13=/Game/InGame/B_PlayerBullet
+MRUItem14=/Game/InGame/MyPlayerController
+MRUItem15=/Game/InGameScreen
+MRUItem16=/Game/MyGameModeBase
+MRUItem17=/Game/StartScreen
+MRUItem18=/Game/MyPlayerController
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1861,6 +1923,10 @@ GraphEditorQuickJumps=()
 /Game/InGame/B_Room.B_Room=1
 /Game/Levels/MasterLevel.MasterLevel:PersistentLevel.MasterLevel=1
 /Game/InGame/Door.Door=1
+/Game/Levels/TestingPauseMenuLevel.TestingPauseMenuLevel:PersistentLevel.TestingPauseMenuLevel=1
+/Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/Enemey.Enemey=1
+/Game/GUI/MainMenu/PauseMenu.PauseMenu=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -1962,7 +2028,7 @@ AndroidRuntimeSettings="\"Object\" \"Object.Audio.CompressionOverrides\" \"Objec
 HoloLensTargetSettings="\"Object\" \"Object.Packaging.PerCultureResources.PerCultureResources[0]\" \"Object.Audio.Audio|CookOverrides\" "
 IOSRuntimeSettings="\"Object\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|Stream Caching\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
 WindowsTargetSettings="\"Object\" \"Object.Audio.CompressionOverrides\" \"Object.Audio.Audio|CookOverrides\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|Stream Caching\" \"Object.Audio.Audio|CookOverrides.Audio|CookOverrides|ResamplingQuality\" "
-LevelSequenceEditorSettings="\"Object\" \"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
+LevelSequenceEditorSettings="\"Object\" \"Object.Tracks.TrackSettings\" \"Object.Tracks.TrackSettings.TrackSettings[0]\" \"Object.Tracks.TrackSettings.TrackSettings[0].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[1]\" \"Object.Tracks.TrackSettings.TrackSettings[1].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2]\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[2].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[1]\" \"Object.Tracks.TrackSettings.TrackSettings[3].DefaultPropertyTracks.DefaultPropertyTracks[2]\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[3].ExcludeDefaultPropertyTracks.ExcludeDefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[0]\" \"Object.Tracks.TrackSettings.TrackSettings[4].DefaultPropertyTracks.DefaultPropertyTracks[1]\" "
 ModelingToolsEditorModeSettings="\"Object\" \"Object.Modeling Mode.Modeling Mode|Generated Assets\" "
 ModelingComponentsSettings="\"Object\" \"Object.Modeling Tools.Modeling Tools|Rendering\" \"Object.Modeling Tools.Modeling Tools|New Mesh Objects\" "
 NiagaraSettings="\"Object\" \"Object.Niagara.AdditionalParameterEnums\" \"Object.Renderer.ComponentRendererWarningsPerClass\" "
@@ -1977,8 +2043,8 @@ K2Node_Event="\"Object\" "
 K2Node_EditablePinBase="\"Object\" "
 K2Node="\"Object\" "
 EdGraphNode="\"Object\" "
-StaticMeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
-MeshComponent="\"Object\" \"Object.Collision.BodyInstance.CollisionResponses.ResponseArray.ResponseArray[7]\" "
+StaticMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
 SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
@@ -2063,6 +2129,10 @@ BrushComponent="\"Object\" "
 ChildActorComponent="\"Object\" "
 BillboardComponent="\"Object\" "
 Actor="\"Object\" "
+MainMenu_C="\"Object\" "
+UserWidget="\"Object\" "
+K2Node_InputKey="\"Object\" "
+PauseMenu_C="\"Object\" "
 
 [DetailCategoriesAdvanced]
 B_PlayerCharacter_C.Replication=False
@@ -2072,6 +2142,7 @@ StaticMeshComponent.Physics=True
 B_Room_C.Actor=False
 
 [PlacementMode]
+RecentlyPlaced=/Game/Enemey.Enemey;
 RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
