--- a/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/GamingGamerGame/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -127,12 +127,12 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,VisualizeLevelInstanceEditing=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",GameShowFlagsString="PostProcessing=0,Bloom=1,LocalExposure=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,VisualizeLocalExposure=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,VisualizeNanite=0,VisualizeLumen=0,VisualizeVirtualShadowMap=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,OpaqueCompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,VisualizeMotionVectors=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,LumenReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,NaniteMeshes=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,VisualizeInstanceUpdates=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,VisualizeLevelInstanceEditing=1,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,PhysicsField=0,VisualizeGlobalDistanceField=0,VisualizeLightingOnProbes=0,ScreenSpaceAO=1,DistanceFieldAO=1,LumenGlobalIllumination=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,VirtualTexturePendingMips=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,DisableOcclusionQueries=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VisualizePostProcessStack=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,VisualizeStrataMaterial=0,VirtualShadowMapCaching=1,DrawOnlyVSMInvalidatingGeo=0,SingleLayerWaterRefractionFullPrecision=0,VirtualTextureResidency=1,DVRStreamingSystem=1,LumenScreenTraces=1,LumenDetailTraces=1,LumenGlobalTraces=1,LumenFarFieldTraces=1,LumenSecondaryBounces=1,LumenScreenSpaceDirectionalOcclusion=1,LumenReuseShadowMaps=1",BufferVisualizationMode="",NaniteVisualizationMode="",LumenVisualizationMode="",VirtualShadowMapVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Levels/LoseLevel
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/WinLevel
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/Levels/BasicRoom
-MRUItem5=/Game/Levels/MasterLevel
+MRUItem0=/Game/Levels/BasicRoom
+MRUItem1=/Game/Levels/MasterLevel
+MRUItem2=/Game/Levels/MainMenu
+MRUItem3=/Game/Levels/EndRoom
+MRUItem4=/Game/Levels/LoseLevel
+MRUItem5=/Game/Levels/WinLevel
 MRUItem6=/Game/Levels/TutorialRoom
 MRUItem7=/Game/Levels/OtherRoom
 MRUItem8=/Game/Levels/InGameScreen
@@ -141,15 +141,11 @@ MRUItem10=/Game/InGameScreen
 MRUItem11=/Game/StartScreen
 
 [EditorStartup]
-LastLevel=/Game/Levels/LoseLevel
+LastLevel=/Game/Levels/BasicRoom
 
 [AssetEditorSubsystem]
 CleanShutdown=False
-OpenAssetsAtExit=/Game/InGame/B_RoomFinal.B_RoomFinal
-OpenAssetsAtExit=/Game/InGame/B_Room.B_Room
-OpenAssetsAtExit=/Game/GUI/MainMenu/WinScreen.WinScreen
-OpenAssetsAtExit=/Game/Levels/LoseLevel.LoseLevel:PersistentLevel.LoseLevel
-OpenAssetsAtExit=/Game/GUI/MainMenu/MainMenu.MainMenu
+OpenAssetsAtExit=/Game/InGame/Wall.Wall
 
 [DetailCategories]
 Actor.TransformCommon=True
@@ -734,6 +730,36 @@ LoseLevel_C.Input=True
 LoseLevel_C.HLOD=True
 LoseLevel_C.WorldPartition=True
 LoseLevel_C.Events=True
+Wall_C.Tick=True
+Wall_C.Replication=True
+Wall_C.Rendering=False
+Wall_C.Collision=True
+Wall_C.Actor=True
+Wall_C.Input=True
+Wall_C.HLOD=True
+Wall_C.WorldPartition=True
+Wall_C.Events=True
+Wall_C.TransformCommon=True
+MainCAmera_C.Default=True
+MainCAmera_C.Tick=True
+MainCAmera_C.AutoPlayerActivation=True
+MainCAmera_C.Replication=True
+MainCAmera_C.Collision=True
+MainCAmera_C.Actor=True
+MainCAmera_C.HLOD=True
+MainCAmera_C.WorldPartition=True
+MainCAmera_C.Events=True
+PlayerPlaceHolder_C.Pawn=True
+PlayerPlaceHolder_C.Tick=True
+PlayerPlaceHolder_C.Camera=True
+PlayerPlaceHolder_C.Replication=True
+PlayerPlaceHolder_C.Rendering=True
+PlayerPlaceHolder_C.Collision=True
+PlayerPlaceHolder_C.Actor=True
+PlayerPlaceHolder_C.Input=True
+PlayerPlaceHolder_C.HLOD=True
+PlayerPlaceHolder_C.WorldPartition=True
+PlayerPlaceHolder_C.Events=True
 
 [RootWindow]
 ScreenPosition=X=320.000 Y=160.000
@@ -1752,14 +1778,14 @@ TcpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings
 TemplateSequenceEditorSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 UdpMessagingSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
 WmfMediaSettings=IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Attack,InputSettings.Bindings.ActionMappings.NewActionMapping_1,InputSettings.Bindings.ActionMappings,InputSettings.Bindings.ActionMappings.MoveRight,InputSettings.Bindings.AxisMappings.NewAxisMapping_0,InputSettings.Bindings.AxisMappings.MoveUp,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.MoveRight,GameMapsSettings.DefaultModes.SelectedGameModeDetails,HoloLensTargetSettings.Packaging.NeutralResources,HoloLensTargetSettings.Packaging.LocalizedResources,
-BlockingVolume=BlockingVolume.Collision.Collision,
-BrushComponent=
-SceneComponent=BlockingVolume.Collision.Collision,
-StaticMeshComponent=
-B_Room_C=BlockingVolume.Collision.Collision,
+BlockingVolume=BlockingVolume.Collision.Collision,StaticMeshComponent.Collision.Collision,
+BrushComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Collision.Collision,
+SceneComponent=BlockingVolume.Collision.Collision,StaticMeshComponent.Collision.Collision,
+StaticMeshComponent=StaticMeshComponent.Collision.Collision,
+B_Room_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Collision.Collision,
 WorldPartitionRuntimeSpatialHash=WorldSettings.GameMode.SelectedGameModeDetails,WorldSettings.WorldPartition.None,
 PlayerStart=BlockingVolume.Collision.Collision,
-CapsuleComponent=
+CapsuleComponent=BlockingVolume.Collision.Collision,
 B_PlayerCharacter_C=BlockingVolume.Collision.Collision,
 Door_C=BlockingVolume.Collision.Collision,
 PropertyWrapper=BlockingVolume.Collision.Collision,
@@ -1775,6 +1801,7 @@ B_RoomFinal_C=BlockingVolume.Collision.Collision,
 MainMenu_C=BlockingVolume.Collision.Collision,
 WinScreen_C=BlockingVolume.Collision.Collision,
 PlayerController=BlockingVolume.Collision.Collision,
+Wall_C=BlockingVolume.Collision.Collision,StaticMeshComponent.Collision.Collision,
 
 [ContentBrowser]
 ContentBrowserDrawer.SourcesExpanded=True
@@ -1834,26 +1861,26 @@ ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Levels/LoseLevel
-MRUItem1=/Game/Levels/EndRoom
-MRUItem2=/Game/Levels/WinLevel
-MRUItem3=/Game/Levels/MainMenu
-MRUItem4=/Game/GUI/MainMenu/MainMenu
-MRUItem5=/Game/GUI/MainMenu/WinScreen
-MRUItem6=/Game/InGame/B_PlayerCharacter
-MRUItem7=/Game/InGame/MyGameModeBase
-MRUItem8=/Game/Levels/BasicRoom
+MRUItem0=/Game/PlayerPlaceHolder
+MRUItem1=/Game/MainCAmera
+MRUItem2=/Game/Levels/BasicRoom
+MRUItem3=/Game/Levels/MasterLevel
+MRUItem4=/Game/InGame/Wall
+MRUItem5=/Game/InGame/MyPlayerController
+MRUItem6=/Game/Levels/MainMenu
+MRUItem7=/Game/Levels/EndRoom
+MRUItem8=/Game/Levels/LoseLevel
 MRUItem9=/Game/InGame/B_Room
-MRUItem10=/Game/Levels/MasterLevel
-MRUItem11=/Game/InGame/B_RoomFinal
-MRUItem12=/Game/Levels/TutorialRoom
-MRUItem13=/Game/Levels/OtherRoom
-MRUItem14=/Game/Levels/InGameScreen
-MRUItem15=/Game/InGame/Door
-MRUItem16=/Game/InGame/B_PlayerBullet
-MRUItem17=/Game/InGame/MyPlayerController
-MRUItem18=/Game/InGameScreen
-MRUItem19=/Game/MyGameModeBase
+MRUItem10=/Game/Levels/WinLevel
+MRUItem11=/Game/GUI/MainMenu/MainMenu
+MRUItem12=/Game/GUI/MainMenu/WinScreen
+MRUItem13=/Game/InGame/B_PlayerCharacter
+MRUItem14=/Game/InGame/MyGameModeBase
+MRUItem15=/Game/InGame/B_RoomFinal
+MRUItem16=/Game/Levels/TutorialRoom
+MRUItem17=/Game/Levels/OtherRoom
+MRUItem18=/Game/Levels/InGameScreen
+MRUItem19=/Game/InGame/Door
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1911,6 +1938,9 @@ GraphEditorQuickJumps=()
 /Game/InGame/MyGameModeBase.MyGameModeBase=1
 /Game/Levels/WinLevel.WinLevel:PersistentLevel.WinLevel=1
 /Game/Levels/MainMenu.MainMenu:PersistentLevel.MainMenu=1
+/Game/InGame/Wall.Wall=1
+/Game/MainCAmera.MainCAmera=1
+/Game/PlayerPlaceHolder.PlayerPlaceHolder=1
 
 [DetailMultiObjectNodeExpansion]
 GeneralProjectSettings=True
@@ -2120,13 +2150,15 @@ B_PlayerCharacter_C.Actor=False
 WorldSettings.PrecomputedVisibility=False
 StaticMeshComponent.Physics=False
 B_Room_C.Actor=False
+Wall_C.Collision=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/InGame/Wall.Wall;
+RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Script/Engine.PlayerStart;/Engine/Transient.ActorFactoryPlayerStart_0
 RecentlyPlaced=/Script/Engine.DirectionalLight;/Engine/Transient.ActorFactoryDirectionalLight_0
 RecentlyPlaced=/Game/InGame/B_RoomFinal.B_RoomFinal;
 RecentlyPlaced=/Game/InGame/B_Room.B_Room;
-RecentlyPlaced=/Script/Engine.BlockingVolume;/Engine/Transient.ActorFactoryBoxVolume_6
 RecentlyPlaced=/Game/InGame/Door.Door;
 RecentlyPlaced=/Game/InGame/B_PlayerCharacter.B_PlayerCharacter;
 RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
